// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-orientation="horizontal"
      class="relative min-h flex overflow-hidden overflow-x"
      data-component-type="tabs"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in full width 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-orientation="horizontal"
      class="relative min-h flex overflow-hidden"
      data-component-type="tabs"
    >
      <div
        class="w-full overflow-hidden after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink flex-grow basis-0 min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink flex-grow basis-0 min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in vertical orientation 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-orientation="vertical"
      class="relative min-h flex overflow-hidden w-[200px] m-0 flex-col overflow-x"
      data-component-type="tabs"
    >
      <div
        class="pl-2 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="flex flex-col"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-selected="false"
            class="opacity-100 first:mt-4 last:mb-4 my-1 mx-0 py-2 px-4 text-left rounded-l rounded-r transition-all w-full overflow-hidden bg-gray hover:bg-gray text-graphite hover:text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full block"
            >
              <div
                class="m-0 text-md text-inherit font-semibold whitespace-nowrap overflow-ellipsis [-webkit-box overflow-hidden text-ellipsis pr-[0.9px] block"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="opacity-100 first:mt-4 last:mb-4 my-1 mx-0 py-2 px-4 text-left rounded-l rounded-r transition-all w-full overflow-hidden bg-gray hover:bg-gray text-graphite hover:text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full block"
            >
              <div
                class="m-0 text-md text-inherit font-semibold whitespace-nowrap overflow-ellipsis [-webkit-box overflow-hidden text-ellipsis pr-[0.9px] block"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-orientation="horizontal"
      class="relative min-h flex overflow-hidden overflow-x"
      data-component-type="tabs"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="true"
            class="opacity-100 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shadow-blue shadow-[inset_0_-2px_0] shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option using custom value 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-orientation="horizontal"
      class="relative min-h flex overflow-hidden overflow-x"
      data-component-type="tabs"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-selected="true"
            class="opacity-100 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shadow-blue shadow-[inset_0_-2px_0] shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-0 pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex flex-row items-center justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;
